--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,98 @@
-/** CSS Reset */
-/* You can keep or remove this, if you'd like */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+
+body{
+  background-color: rgba(221, 226, 225, 0.507);
+  font-family: serif;
+  padding: 300px;
 }
 
-* {
-  margin: 0;
+
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  margin-bottom: 60px;
+  max-height: 300px;
 }
 
-/** You can define your own CSS variables here */
-:root {
-  /** Example: */
-  --main-background: rgb(61, 125, 202);
+span {
+  font-family: sans-serif;
+  font-size: 20px;
+  margin-top: 0;
+  margin-bottom: 15px;
+  text-align: left;
+  color: black(255, 255, 255, 0);
 }
 
-/** Project styling */
+h3 {
+  font-family: sans-serif;
+  font-size: 20px;
+  margin-top: 0;
+  margin-bottom: 15px;
+  text-align: left;
+  color: black(255, 255, 255, 0);
+}
 
-/** Your styles go here */
+h2 {
+  font-family: sans-serif;
+  font-size: 20px;
+  margin-top: 0;
+  margin-bottom: 15px;
+  text-align: left;
+  color: black(255, 255, 255, 0);
+}
+
+h1 {
+  font-family: sans-serif;
+  font-size: 60px;
+  margin-top: 0;
+  margin-bottom: 15px;
+  text-align: left;
+  color: black(255, 255, 255, 0);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
